Payment and Serarh

--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,11 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "**/*",
+                "input": "src/assets",
+                "output": "/assets"
               }
             ],
             "styles": [
@@ -67,12 +72,17 @@
         },
         "serve": {
           "builder": "@angular/build:dev-server",
+          "options": {
+            "ssl": true,
+            "port": 4200
+          },
           "configurations": {
             "production": {
               "buildTarget": "ECommerceFrontend:build:production"
             },
             "development": {
-              "buildTarget": "ECommerceFrontend:build:development"
+              "buildTarget": "ECommerceFrontend:build:development",
+              "proxyConfig": "proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
@@ -94,6 +104,11 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "**/*",
+                "input": "src/assets",
+                "output": "/assets"
               }
             ],
             "styles": [
