--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     "@angular/platform-browser": "^20.3.0",
     "@angular/platform-browser-dynamic": "^20.3.6",
     "@angular/router": "^20.3.0",
+    "@mercadopago/sdk-js": "^0.0.3",
+    "@ngx-translate/core": "^17.0.0",
+    "@ngx-translate/http-loader": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
