feat: add production-ready improvements
- Add LoggerService with conditional logging and external integration support
- Add LoadingService with Angular Signals for global loading state
- Add GlobalErrorHandler with error-boundary fallback UI
- Add LoadingSpinner and InlineSpinner components
- Improve ErrorInterceptor with retry logic and exponential backoff
- Add SSR safety checks to theme, language, saved-searches, search-history services
- Remove unused LoginComponent (auth handled by external service)
- Adjust CSS budgets and allow MercadoPago CommonJS dependency
- Add security-headers.md documentation for deployment
- Add PRODUCTION-READY-IMPROVEMENTS.md summary

--- a/angular.json
+++ b/angular.json
@@ -51,16 +51,19 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
+                  "maximumWarning": "550kB",
                   "maximumError": "1MB"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "4kB",
-                  "maximumError": "8kB"
+                  "maximumWarning": "10kB",
+                  "maximumError": "16kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "allowedCommonJsDependencies": [
+                "@mercadopago/sdk-js"
+              ]
             },
             "development": {
               "optimization": false,
