--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "test:ci": "ng test --watch=false --browsers=ChromeHeadless --code-coverage",
+    "e2e": "playwright test",
+    "e2e:ui": "playwright test --ui",
+    "e2e:headed": "playwright test --headed",
+    "e2e:report": "playwright show-report",
     "lint": "ng lint",
     "lint:fix": "ng lint --fix",
     "format": "prettier --write \"src/**/*.{ts,html,scss,css,json}\"",
@@ -54,6 +58,8 @@
     "@mercadopago/sdk-js": "^0.0.3",
     "@ngx-translate/core": "^17.0.0",
     "@ngx-translate/http-loader": "^17.0.0",
+    "@sentry/angular": "^10.30.0",
+    "@sentry/browser": "^10.30.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -63,6 +69,7 @@
     "@angular/cli": "^20.3.6",
     "@angular/compiler-cli": "^20.3.0",
     "@angular/localize": "^20.3.6",
+    "@playwright/test": "^1.57.0",
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "20.4.0",
     "eslint": "^9.37.0",
